--- a/Rtos_Lesson2.ioc
+++ b/Rtos_Lesson2.ioc
@@ -3,11 +3,12 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LedTask1,0,128,LedTaskFunc,Default,NULL,Dynamic,NULL,NULL;myTask03,0,128,YellowLED,Default,NULL,Dynamic,NULL,NULL;performTrigonom,-3,128,performTrigonometricCalculations_Func,Default,NULL,Dynamic,NULL,NULL;generatePrimeNu,-3,128,generatePrimeNumbers_Func,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE,configENABLE_FPU,FootprintOK
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LedTask1,24,128,LedTaskFunc,Default,NULL,Dynamic,NULL,NULL;myTask03,24,128,YellowLED,Default,NULL,Dynamic,NULL,NULL;performTrigonom,24,128,performTrigonometricCalculations_Func,Default,NULL,Dynamic,NULL,NULL;TaskMemory,24,128,TaskMemory_Func,Default,NULL,Dynamic,NULL,NULL;Fibonachi,16,128,Fibonachi_Func,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
-FREERTOS.configTOTAL_HEAP_SIZE=6144
+FREERTOS.configTOTAL_HEAP_SIZE=9216
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 FREERTOS.configUSE_TRACE_FACILITY=1
@@ -31,7 +32,7 @@ Mcu.Pin11=PA13
 Mcu.Pin12=PA14
 Mcu.Pin13=PB3
 Mcu.Pin14=PB5
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin16=VP_SYS_VS_tim17
 Mcu.Pin17=VP_SYS_VS_DBSignals
 Mcu.Pin2=PC15-OSC32_OUT
@@ -201,8 +202,8 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
-VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_tim17.Mode=TIM17
