--- a/Rtos_Lesson2.ioc
+++ b/Rtos_Lesson2.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE,configENABLE_FPU,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LedTask1,24,128,LedTaskFunc,Default,NULL,Dynamic,NULL,NULL;myTask03,24,128,YellowLED,Default,NULL,Dynamic,NULL,NULL;performTrigonom,24,128,performTrigonometricCalculations_Func,Default,NULL,Dynamic,NULL,NULL;TaskMemory,24,128,TaskMemory_Func,Default,NULL,Dynamic,NULL,NULL;Fibonachi,16,128,Fibonachi_Func,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LD2_Task,24,128,LD2TaskFunc,Default,NULL,Dynamic,NULL,NULL;LEDYellow_Task,24,128,YellowLED_Func,Default,NULL,Dynamic,NULL,NULL;Trigonometry,33,128,performTrigonometricCalculations_Func,Default,NULL,Dynamic,NULL,NULL;TaskMemory,24,128,TaskMemory_Func,Default,NULL,Dynamic,NULL,NULL;Fibonachi,24,128,Fibonachi_Func,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
@@ -21,29 +21,29 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP4=TIM4
+Mcu.IP5=USART3
+Mcu.IPNb=6
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC8
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=PB5
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin16=VP_SYS_VS_tim17
-Mcu.Pin17=VP_SYS_VS_DBSignals
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin3=PF0-OSC_IN
-Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PC4
-Mcu.Pin9=PC5
-Mcu.PinsNb=18
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=PB5
+Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin14=VP_SYS_VS_tim17
+Mcu.Pin15=VP_SYS_VS_DBSignals
+Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PB10
+Mcu.Pin8=PB11
+Mcu.Pin9=PA13
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -51,7 +51,6 @@ MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -64,6 +63,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_TRG_COM_TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -89,6 +89,10 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [green led]
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
@@ -96,22 +100,12 @@ PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=B1 [blue push button]
-PC13.Locked=true
-PC13.Signal=GPXTI13
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC4.Mode=Asynchronous
-PC4.Signal=USART1_TX
-PC5.Mode=Asynchronous
-PC5.Signal=USART1_RX
-PC8.Locked=true
-PC8.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -147,7 +141,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADC12Freq_Value=150000000
 RCC.ADC345Freq_Value=150000000
 RCC.AHBFreq_Value=150000000
@@ -162,6 +156,7 @@ RCC.FCLKCortexFreq_Value=150000000
 RCC.FDCANFreq_Value=150000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=150000000
+RCC.HRTIM1Freq_Value=150000000
 RCC.HSE_VALUE=24000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
@@ -170,18 +165,17 @@ RCC.I2C2Freq_Value=150000000
 RCC.I2C3Freq_Value=150000000
 RCC.I2C4Freq_Value=150000000
 RCC.I2SFreq_Value=150000000
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=150000000
 RCC.LPUART1Freq_Value=150000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLM=RCC_PLLM_DIV8
-RCC.PLLN=100
+RCC.PLLM=RCC_PLLM_DIV4
+RCC.PLLN=75
 RCC.PLLPoutputFreq_Value=150000000
 RCC.PLLQoutputFreq_Value=150000000
 RCC.PLLRCLKFreq_Value=150000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=150000000
 RCC.QSPIFreq_Value=150000000
 RCC.RNGFreq_Value=150000000
@@ -196,18 +190,25 @@ RCC.USART1Freq_Value=150000000
 RCC.USART2Freq_Value=150000000
 RCC.USART3Freq_Value=150000000
 RCC.USBFreq_Value=150000000
-RCC.VCOInputFreq_Value=3000000
+RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=300000000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
-USART1.IPParameters=VirtualMode-Asynchronous
-USART1.VirtualMode-Asynchronous=VM_ASYNC
+TIM4.IPParameters=Prescaler,PeriodNoDither
+TIM4.PeriodNoDither=0
+TIM4.Prescaler=6553
+USART3.AutoBaudRateEnableParam=UART_ADVFEATURE_AUTOBAUDRATE_ENABLE
+USART3.DataInvertParam=ADVFEATURE_DATAINV_DISABLE
+USART3.IPParameters=VirtualMode-Asynchronous,Parity,MSBFirstParam,DataInvertParam,AutoBaudRateEnableParam
+USART3.MSBFirstParam=ADVFEATURE_MSBFIRST_DISABLE
+USART3.Parity=PARITY_NONE
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_tim17.Mode=TIM17
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-G474RE
 boardIOC=true
 rtos.0.ip=FREERTOS
